--- a/corporate.html
+++ b/corporate.html
@@ -101,19 +101,19 @@ If the project continued, we would put TikTok on hold. We would not delete the a
           <a href="https://www.tiktok.com/@virtyou_/video/7076347126262861062?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post1.png">
 			  </a>
-			 <p>Our firtst post on TikTok, we wanted to create awareness for our brand in a entertaining yet pleasing way as we already show a little of our logo:</p>
+			 <p>Our firtst post on TikTok, we wanted to create awareness for our brand in a entertaining yet pleasing way as we already show a little of our logo.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CbKFCvbMlRn/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post2.png">
           </a>
-			<p>Our first post on Instagram, we wanted to make the viewer aware of our brand and already show them a hint of what the theme and colour would be:</p>
+			<p>Our first post on Instagram, we wanted to make the viewer aware of our brand and already show them a hint of what the theme and colour would be.</p>
         </li>
         <li class="m-2">
           <a href="https://www.tiktok.com/@virtyou_/video/7077830613549583622?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post3.png">
           </a>
-			<p>Our second post on TikTok, we wanted to share our core values. Again in a entertaining way using a (at that moment) popular sound hoping to get as many viewers as possible:</p>
+			<p>Our second post on TikTok, we wanted to share our core values. Again in a entertaining way using a (at that moment) popular sound hoping to get as many viewers as possible.</p>
         </li>
       </ul>
 	<p>&nbsp;</p>
@@ -122,13 +122,13 @@ If the project continued, we would put TikTok on hold. We would not delete the a
           <a href="https://www.instagram.com/p/CbvRdI4orUb/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post4.png">
           </a>
-			<p>Our Second post on Instagram, Our Logo! With this post we wanted to share our logo and brand values on Instagram. This to get our viewers attention and to make them curious for the product</p>
+			<p>Our Second post on Instagram, Our Logo! With this post we wanted to share our logo and brand values on Instagram. This to get our viewers attention and to make them curious for the product.</p>
         </li>
         <li class="m-2">
           <a href="https://www.tiktok.com/@virtyou_/video/7080477342677683461?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post5.png">
           </a>
-			<p>Another TikTok, this one is to create awareness for our values and showing what we stand for by using a sound that embodies our values:</p>
+			<p>Another TikTok, this one is to create awareness for our values and showing what we stand for by using a sound that embodies our values.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcGWL8louiK/" target="_blank">
@@ -164,7 +164,7 @@ If the project continued, we would put TikTok on hold. We would not delete the a
           <a href="https://www.instagram.com/p/CcQcRoKoB-w/" target="_blank">
             <img alt="Image Placeholder" class="img-thumbnail" src="images/Post10.png">
           </a>
-			<p>Another Instagram post, our product! With this post we share our product with our viewers:</p>
+			<p>Another Instagram post, our product! With this post we share our product with our viewers.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcU-t-8IvWb/" target="_blank">
@@ -177,7 +177,7 @@ If the project continued, we would put TikTok on hold. We would not delete the a
     </main>
 
     <!-- A footer with socials -->  
-    <footer class="shadow-lg mt-5 py-4 bg-body">
+   <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
           © 2021&ndash;2022 &mdash; Breda University of Applied Sciences
@@ -185,24 +185,22 @@ If the project continued, we would put TikTok on hold. We would not delete the a
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>	
-			  
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
           </li>
         </ul>
       </div>
-  </footer>
+    </footer>
     <!-- End of the grid -->
 
   </body>
