Image fix content

--- a/content justification.html
+++ b/content justification.html
@@ -184,7 +184,7 @@ Red symbolizes action, confidence, courage, and change and is a powerful color t
 We have decided not to use complicated lines or too much detail so that the main subject in our logo (the tiger) gets all the attention.
 We have made the name of our brand name black but decided to make the 'YOU' part red because, with our name, we are bringing a message to our target audience. So, by making this, they will feel addressed.<br><br>
 As feedback, we got back that the logo was too detailed, and the color red wasn't bold enough.
-		  <img class="img-fluid about-the-brand-logo" src="images/First_Logo.png" alt="Placeholder Image"><br>
+		  <img class="img-fluid about-the-brand-logo" src="images/First_logo.png" alt="First logo Image"><br>
 </p>
 		
 		<p><strong>Logo Version 2:</strong><br>
