--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ function MM_popupMsg(msg) { //v1.0
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Send us a message on Outlook" width="35">
             </a>
           </li>
           <li>	
