--- a/content justification.html
+++ b/content justification.html
@@ -270,16 +270,15 @@ What are Virtues? (2019, February 8). Virtues For Life. <a href="https://www.vir
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Sens us a message on Outlook" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
