--- a/corporate.html
+++ b/corporate.html
@@ -185,7 +185,7 @@ If the project continued, we would put TikTok on hold. We would not delete the a
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Sens us a message on Outlook" width="35">
             </a>
           </li>
           <li>	
