--- a/marketing justification.html
+++ b/marketing justification.html
@@ -183,7 +183,7 @@ WorkMacro. (2018, the 9th of March). What Your Follower/Following Ratio Say Abou
 	
 
     <!-- A footer with socials -->  
-    <footer class="shadow-lg mt-5 py-4 bg-body">
+     <footer class="shadow-lg mt-5 py-4 bg-body">
       <div class="container d-flex justify-content-between align-items-center">
         <p>
           © 2021&ndash;2022 &mdash; Breda University of Applied Sciences
@@ -191,16 +191,15 @@ WorkMacro. (2018, the 9th of March). What Your Follower/Following Ratio Say Abou
         <ul class="list-unstyled d-flex align-items-center opacity-75">
           <li>
             <a href="mailto:Virtyou@outlook.com" target="_blank">
-              <img class="social-icon" src="images/Outlook.png" alt="Follow us on Outlook" width="35">
+              <img class="social-icon" src="images/Outlook.png" alt="Sens us a message on Outlook" width="35">
             </a>
           </li>
           <li>	
             <a href="https://www.tiktok.com/@virtyou_" target="_blank">
-              <img class="social-icon" src="images/tiktok.jpg" alt="Follow us on TikTok" width="35">
+              <img class="social-icon" src="images/TikTok.jpg" alt="Follow us on TikTok" width="35">
             </a>
           </li>
           <li>
-			  
             <a href="https://www.instagram.com/virtyou_/">
               <img class="social-icon" src="images/instagram.svg" alt="Follow us on Instagram" width="26">
             </a>
