--- a/corporate.html
+++ b/corporate.html
@@ -170,9 +170,16 @@ If the project continued, we would put TikTok on hold. We would not delete the a
           <a href="https://www.instagram.com/p/CcU-t-8IvWb/" target="_blank">
             <img alt="Post11" class="img-thumbnail" src="images/Post11.png">
           </a>
-			<p>Our (For now) Last Instagram post. With this post we want to create awareness for our brand, for the values and for the product. all of the above have already been communicated, wich makes this post a great reminder/ refresher for the viewer.</p>
+		  <p>Our (For now) Last Instagram post. With this post we want to create awareness for our brand, for the values and for the product. all of the above have already been communicated, wich makes this post a great reminder/ refresher for the viewer.</p>
+		  <p>Aslam, S. (2022, March 3). • TikTok by the Numbers (2022): Stats, Demographics &amp; Fun Facts. Omnicor.&nbsp; &nbsp;<a href="https://www.omnicoreagency.com/tiktok-statistics/ ">https://www.omnicoreagency.com/tiktok-statistics/&nbsp;</a></p>
+		  <p>CBS. (2020). Nederland in cijfers - Wie gebruikt het vaakst sociale media? <a href="https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:0be21623-5fc4-3910-8fed-810d1fdab754  ">https://acrobat.adobe.com/link/review?uri=urn:aaid:scds:US:0be21623-5fc4-3910-8fed-810d1fdab754 &nbsp;</a></p>
+		  <p>Henderson, G. (2020, the 19th of November). What Is A Good Audience Size For Facebook Ads? Digitalmarketing. <a href="https://www.digitalmarketing.org/blog/what-is-a-good-audience-size-for-facebook-ads  ">https://www.digitalmarketing.org/blog/what-is-a-good-audience-size-for-facebook-ads&nbsp;&nbsp;</a></p>
+		  <p>Inkbot Design. (2020, the 12th of October). How To Determine Your Branding Objectives. <a href="https://inkbotdesign.com/branding-objectives/ ">https://inkbotdesign.com/branding-objectives/&nbsp;</a></p>
+		  <p>PromoRepublic. <a href="https://promorepublic.com/en/blog/what-is-a-good-instagram-engagement-rate-in-2021/">https://promorepublic.com/en/blog/what-is-a-good-instagram-engagement-rate-in-2021/&nbsp;</a></p>
+		  <p>WorkMacro. (2018, the 9th of March). What Your Follower/Following Ratio Say About Your Instagram Account. <a href="https://workmacro.com/instagram/follower-following-ratio-say-instagram-account/#:%7E:text=The%20average%20number%20of%20followers,of%20your%20follower%2Ffollowing%20ratio.  ">https://workmacro.com/instagram/follower-following-ratio-say-instagram-account/#:%7E:text=The%20average%20number%20of%20followers,of%20your%20follower%2Ffollowing%20ratio.&nbsp;&nbsp;</a></p>
+<p>&nbsp;</p>
         </li>
-        
+
       </ul>
     </main>
 
