--- a/corporate.html
+++ b/corporate.html
@@ -99,19 +99,19 @@ If the project continued, we would put TikTok on hold. We would not delete the a
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="https://www.tiktok.com/@virtyou_/video/7076347126262861062?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post1.png">
+            <img alt="Post1" class="img-thumbnail" src="images/Post1.png">
 			  </a>
 			 <p>Our firtst post on TikTok, we wanted to create awareness for our brand in a entertaining yet pleasing way as we already show a little of our logo.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CbKFCvbMlRn/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post2.png">
+            <img alt="Post2" class="img-thumbnail" src="images/Post2.png">
           </a>
 			<p>Our first post on Instagram, we wanted to make the viewer aware of our brand and already show them a hint of what the theme and colour would be.</p>
         </li>
         <li class="m-2">
           <a href="https://www.tiktok.com/@virtyou_/video/7077830613549583622?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post3.png">
+            <img alt="Post3" class="img-thumbnail" src="images/Post3.png">
           </a>
 			<p>Our second post on TikTok, we wanted to share our core values. Again in a entertaining way using a (at that moment) popular sound hoping to get as many viewers as possible.</p>
         </li>
@@ -120,19 +120,19 @@ If the project continued, we would put TikTok on hold. We would not delete the a
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="https://www.instagram.com/p/CbvRdI4orUb/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post4.png">
+            <img alt="Post4" class="img-thumbnail" src="images/Post4.png">
           </a>
 			<p>Our Second post on Instagram, Our Logo! With this post we wanted to share our logo and brand values on Instagram. This to get our viewers attention and to make them curious for the product.</p>
         </li>
         <li class="m-2">
           <a href="https://www.tiktok.com/@virtyou_/video/7080477342677683461?is_copy_url=1&is_from_webapp=v1&lang=nl-NL" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post5.png">
+            <img alt="Post5" class="img-thumbnail" src="images/Post5.png">
           </a>
 			<p>Another TikTok, this one is to create awareness for our values and showing what we stand for by using a sound that embodies our values.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcGWL8louiK/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post6.png">
+            <img alt="Post6" class="img-thumbnail" src="images/Post6.png">
           </a>
 			<p>Another post on Instagram, This is one of our viewers perspective on the problem. We share these posts to keep the viewer engaged and heared.</p>
         </li>
@@ -141,19 +141,19 @@ If the project continued, we would put TikTok on hold. We would not delete the a
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcFQP-DM0nd/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post7.png">
+            <img alt="Post7" class="img-thumbnail" src="images/Post7.png">
           </a>
 			<p>Another Instagram post, This one is to ask for the stories of our victims. By asking them questions we want to craete customer involvement. </p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcFw92LLSix/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post8.png">
+            <img alt="post8" class="img-thumbnail" src="images/Post8.png">
           </a>
 			<p>Another call to action on Instagram. This post had the same purpose as the previous Instagram post, only this post was posted later in the evening to check hen our viewers would be most active, in the morning or in the evening.</p>
         </li>
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcGWL8louiK/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post9.png">
+            <img alt="Post9" class="img-thumbnail" src="images/Post9.png">
           </a>
 			<p>Another post on Instagram, and yet another story that one of our viewers send to us. We post this to create customer involveness.</p>
         </li>
@@ -162,7 +162,7 @@ If the project continued, we would put TikTok on hold. We would not delete the a
       <ul class="list-unstyled d-flex flex-wrap justify-content-center align-items-center">
         <li class="m-2">
           <a href="https://www.instagram.com/p/CcQcRoKoB-w/" target="_blank">
-            <img alt="Image Placeholder" class="img-thumbnail" src="images/Post10.png">
+            <img alt="Post10" class="img-thumbnail" src="images/Post10.png">
           </a>
 			<p>Another Instagram post, our product! With this post we share our product with our viewers.</p>
         </li>
