--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ function MM_popupMsg(msg) { //v1.0
         </div>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/VirtYou Sweaters_SWEATER 3.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER3.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
                 <a href="sweater 3.html" class="btn btn-outline-light my-md-2">My Body My Rules - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
@@ -100,15 +100,15 @@ function MM_popupMsg(msg) { //v1.0
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/VirtYou Sweaters_SWEATER 2.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER2.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
-                <a href="sweater 2.html" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
+                <a href="images/SWEATER2.png" class="btn btn-outline-light my-md-2">Fuck Off + Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
               </p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="images/VirtYou Sweaters_SWEATER 1.png" class="d-block mx-auto w-100" alt="...">
+            <img src="images/SWEATER1.png" class="d-block mx-auto w-100" alt="...">
             <div class="carousel-caption">
               <p>
                 <a href="sweater 1.html" class="btn btn-outline-light my-md-2">Only Logo - Sweater<span class="d-inline d-md-none"> About Sweater</span></a>
